<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="vertical"
    android:importantForAccessibility="yes"
    android:focusable="true"
    android:contentDescription="@string/cd_album_card">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/albumCoverImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/cd_album_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/cover_1"
        android:importantForAccessibility="no"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <TextView
        android:id="@+id/albumTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="serif"
        android:maxLines="1"
        android:textColor="@color/title_text"
        android:textSize="16sp"
        android:importantForAccessibility="yes" />

    <TextView
        android:id="@+id/albumArtistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/body_text"
        android:textSize="13sp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/albumMetaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/meta_text"
        android:textSize="11sp"
        android:importantForAccessibility="no" />

</LinearLayout>